add swagger docs for verify otp and gen otp
