# app/Http/Controllers/PassportAuthController.php
@@ -4,6 +4,7 @@ namespace App\Http\Controllers;
 use Illuminate\Http\Request;
 use App\Models\User;
 use App\Models\CountryCode;
+use App\Models\OTPCollection;
 use App\Enums\UserRole;
 use App\Http\Requests\RegisterUserRequest;
 use App\Http\Requests\VerifyOtpRequest;
@@ -33,6 +34,9 @@ class PassportAuthController extends Controller
         $phone_number = $phone_number.substr($request->whatsapp_number, 1);
 
         $smsOtpManager->sendMessage("Thank you for using ECS Pay. This is your signup otp: $otp. If this request was not generated by you please reset your password as soon as possible.", $phone_number);
+
+        // store otp for verification later
+        OTPCollection::create(['otp'=> $otp, "phone" => $phone_number]);
 
         return $otp;
     }
@@ -144,7 +148,7 @@ class PassportAuthController extends Controller
     }
 
 
-    /*
+    /**
     * @OA\Post(
     * path="/api/verifyOtp",
     * operationId="VerifyOtp",
@@ -155,47 +159,81 @@ class PassportAuthController extends Controller
     *    required=true,
     *    description="Verify user otp",
     *    @OA\JsonContent(
-    *       required={"password", "password_confirmation", "whatsappNumber", "countryCode", "otp", "country"},
+    *       required={"otp", "whatsappNumber", "countryCode"},
     *       @OA\Property(property="otp", type="string", format="string", example="9999"),
     *       @OA\Property(property="whatsapp_number", format="phone", type="string", example="0502342345"),
     *       @OA\Property(property="country_code", type="string", example="GH"),
     *    ),
     * ),
-    *      @OA\Response(
-    *          response=201,
-    *          description="Registered Successfully",
-    *          @OA\JsonContent()
-    *       ),
+    * @OA\Response(
+    *      response=201,
+    *         description="Verified Successfully",
+    *       @OA\JsonContent()
+    *  ),
     *      
     *    
     * )
     */
     public function verifyOtp(VerifyOtpRequest $request){
        //find user with whatsapp and country code and otp
+
+       $otp = OTPCollection::where("phone", "".$request->country_code.$request->whatsapp_number)
+                        ->where("otp", $request->otp)
+                        ->firstOrFail();
        $user = User::where("whatsapp_number", $request->whatsapp_number)
                         ->where("country_code", $request->country_code)
                         ->where("otp", $request->otp)
                         ->firstOrFail();
-       return response()->json(['Success' => 'User verified.'], 200);
        //change user to verified
        $user['is_verified'] = true;
        $user->save();
        return response()->json(["Success" => $user['user_name']." has been successfully verified."],200);
     }
 
+    /**
+    * @OA\Post(
+    * path="/api/generateOtp",
+    * operationId="generateOtp",
+    * tags={"Generate Otp"},
+    * summary="Generate Otp",
+    * description="Generate OTP",
+    *   @OA\RequestBody(
+    *    required=true,
+    *    description="Pass user credentials",
+    *    @OA\JsonContent(
+    *       required={"whatsapp_number", "country_code"},
+    *       @OA\Property(property="whatsapp_number", format="phone", type="string", example="0502342345"),
+    *       @OA\Property(property="country_code", type="string", example="GH"),
+    *    ),
+    * ),
+    *      @OA\Response(
+    *          response=201,
+    *          description="Login Successfully",
+    *          @OA\JsonContent()
+    *       ),
+    *      
+    *    
+    * )
+    */
     public function generateOtp(GenerateOtpRequest $request){
         //find country code if exists.
         $phone_number = CountryCode::where("code", $request->country_code)->firstOrFail();
         //Check if whatsapp number belongs to a registered user.
         $user = User::where("whatsapp_number", $request->whatsapp_number, "country_code", $request->country_code)->firstOrFail();
+        
         //send sms
-        $otp = $this->sendSms($request);
-        $user['otp'] = $otp;
-        $user->save();
         //Generate phone number with country code.
         $phone_number = $phone_number["dial_code"];
         $phone_number = $phone_number.substr($request->whatsapp_number, 1);
-        
+        try{
+           $otp = $this->sendSms($request);
+        }
+        catch(Exception $e){
+            return response()->json(["Error" => "Could not send otp to".$phone_number]);
+        }
+
+        OTPCollection::create(['otp' => $otp, "phone" => $phone_number]);
+
         return ["Success" => "Otp has been sent to ".$phone_number];
     }
  
